# Phat-Contracts

./: Cargo.toml  README.md
crates/index-traits/: Cargo.toml
crates/index-traits/src/: lib.rs
crates/paralib/: Cargo.toml
crates/paralib/src/: lib.rs
erc20/: Cargo.toml
erc20/src/: lib.rs
ethsigher/src/: lib.rs
ethsigner/: Cargo.toml
ethsigner/src/: lib.rs
ethtransactor/: Cargo.toml
ethtransactor-helloworld/: Cargo.toml
ethtransactor/res/: evm_contract.abi.json
ethtransactor/src/: lib.rs
ethtx/: README.md
incrementer/: Cargo.toml
incrementer/src/: lib.rs
index-traits/: Cargo.toml
index-traits/src/: lib.rs
scripts/eth/: .gitignore  hardhat.config.ts  package-lock.json  package.json
scripts/eth/contracts/: Token.sol
scripts/eth/scripts/: bridge.ts  deploy-hardhat.ts  deploy.ts  interact-with-helloworld-through-phat-contracts.ts  interact-with-helloworld.ts
scripts/eth/scripts/abi/: goerli-bridge.json  goerli-token.json
scripts/js/: package-lock.json
scripts/js/src/: common.js  config.json  contract.js  deploy.js  e2e.js  run.js
scripts/js/src/res/: .contract
scripts/sub/src/: common.js  e2e.js  keyring.json  run.js  utils.js
scripts/sub/src/examples/: listen-to-balance-changes.js
signer/: Cargo.toml
signer/src/: lib.rs
subsigner/: Cargo.toml
subsigner/src/: lib.rs
subtransactor/: Cargo.toml
subtransactor/src/: lib.rs
subxt-scripts/: Cargo.toml  metadata.scale
subxt-scripts/src/: main.rs
