[workspace]
resolver = "2"

members = [
    "erc20",
    "incrementer",
    "subsigner",
    "ethsigner",
    "ethtransactor",
    "subtransactor",
    "ethtransactor-helloworld",
    "subxt-scripts"
]

exclude = [
    "crates/index-traits",
    "crates/paralib"
]

# Sneak peek of the new test engine!
[patch.crates-io]
ink_primitives = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
ink_metadata = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
ink_env = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
ink_storage = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
ink_lang = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
ink_lang_codegen = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
ink_lang_ir = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
ink_lang_macro = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.3.1" }
