[package]
name = "subtransactor"
version = "0.1.2"
authors = ["anonymous"]
edition = "2021"

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }


pink-extension = { version = "0.1.17", default-features = false }
pink-web3 = { git = "https://github.com/Phala-Network/pink-web3.git", branch = "pink", default-features = false, features = ["pink", "signing"]}
primitive-types = { version = "0.11", default-features = false, features = ["codec", "scale-info"] }
paralib = { path = "../crates/paralib", default-features = false }
hex-literal = "0.3"
hex = { version = "0.4.3", default-features = false }
json = { version = "0.4.0", package = "pink-json", default-features = false }

#serde_json = { version = "1.0.0", default-features = false }
#serde = { version = "1.0.0", default-features = false }
#sp_runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", package = "sp-runtime" }
#sp_core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", package = "sp-core" }
#sp_keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "sp-keyring" }
#sp_version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "sp-version" }

[dev-dependencies]
pink-extension-runtime = "0.1.5"
dotenv = "0.15.0"


[lib]
name = "subtransactor"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "pink-web3/std",
    "hex/std",
    "json/std"
]
ink-as-dependency = []
