[package]
name = "index-traits"
version = "0.1.2"
authors = ["anonymous"]
edition = "2021"

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
pink-extension = { version = "0.1.17", default-features = false }


[dev-dependencies]
pink-extension-runtime = "0.1.3"

[features]
default = ["std", "runtime_utils", "ink-as-dependency"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
]
runtime_utils = ["std"]
ink-as-dependency = []
